@@ -1,7 +1,6 @@
 package com.xitricon.questionnaireservice.model.v2;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.hibernate.envers.Audited;
 import org.springframework.data.annotation.Id;
@@ -22,14 +21,14 @@ import lombok.experimental.SuperBuilder;
 @Document(collection = "questionnaires_v2")
 public class Questionnaire extends Auditable<String> {
 
-    @Id
+	@Id
 	private String id;
 	private String title;
 	private List<QuestionnaireQuestion> questions;
 
 	@JsonIgnore
-    public QuestionnaireOutputDTO viewAsDTO() {
-        return new QuestionnaireOutputDTO(this.id, this.title, this.createdAt, this.modifiedAt, this.createdBy, this.modifiedBy,
-            this.questions.stream().map(QuestionnaireQuestion::viewAsDTO).collect(Collectors.toList()));
-    }
+	public QuestionnaireOutputDTO viewAsDTO() {
+		return new QuestionnaireOutputDTO(this.id, this.title, this.createdAt, this.modifiedAt, this.createdBy,
+				this.modifiedBy, this.questions.stream().map(QuestionnaireQuestion::viewAsDTO).toList());
+	}
 }
